* Store execution context in rule engine log

Version 1.6 - 2015-12-23
* Display expected return type to help user

Version 1.4 - 2015-05-29
* Add calculation date to rule engine log to retrieve more easily the good log
* Execution logs are no more automatically deleted when the debug mode is removed
* Move test case and execution logs to relate

Version 1.3 - 2015-01-22
* Improve performances with cache

Version 1.2 - 2014-07-01
* Changelog file creation